@@ -1,12 +1,14 @@
 #MOLGENIS walltime=23:59:00 mem=4gb ppn=1
 
+#string project
+
+
 #Parameter mapping  #why not string foo,bar? instead of string foo\nstring bar
 #string stage
 #string checkStage
-#string WORKDIR
 #string projectDir
 
-#string gatkVersion
+#string gatkMod
 #string onekgGenomeFasta
 #string custAnnotVcf
 #string custAnnotVcfIdx
@@ -28,7 +30,7 @@ for file in "${onekgGenomeFasta}" "${custAnnotVcf}" "${custAnnotVcfIdx}"; do
 done
 
 #Load gatk module
-${stage} GATK/${gatkVersion}
+${stage} ${gatkMod}
 ${checkStage}
 
 set -x
@@ -37,7 +39,7 @@ set -e
 mkdir -p ${variantFiltDir}
 
 java -Xmx4g -Djava.io.tmpdir=${variantFiltDir} \
- -jar $GATK_HOME/GenomeAnalysisTK.jar \
+  -XX:+UseConcMarkSweepGC  -XX:ParallelGCThreads=1 -jar $EBROOTGATK/GenomeAnalysisTK.jar \
  -T SelectVariants \
  -R ${onekgGenomeFasta} \
  --variant:vcf ${custAnnotVcf} \
@@ -47,13 +49,12 @@ java -Xmx4g -Djava.io.tmpdir=${variantFiltDir} \
  -selectType MNP \
 
 java -Xmx4g -Djava.io.tmpdir=${variantFiltDir} \
- -jar $GATK_HOME/GenomeAnalysisTK.jar \
+  -XX:+UseConcMarkSweepGC  -XX:ParallelGCThreads=1 -jar $EBROOTGATK/GenomeAnalysisTK.jar \
  -T VariantFiltration \
  -R ${onekgGenomeFasta} \
  --variant:VCF ${indelMnpRawVcf} \
  -o ${indelMnpVcf} \
- --filterExpression "QUAL < 30"  --filterName "LowQual" \
- --filterExpression "QD < 2.0" --filterName "QDlt2" \
+ --filterExpression "QUAL < 20"  --filterName "LowQual" \
  --filterExpression "vc.hasAttribute('ReadPosRankSum') && ReadPosRankSum < -20.0"  --filterName "ReadPosRankSumlt-20" \
  --filterExpression "FS > 200.0"  --filterName "FSgt200" \
  --filterExpression "vc.hasAttribute('RPA') &&(vc.getAttribute('RPA').0 > 8||vc.getAttribute('RPA').1 > 8||vc.getAttribute('RPA').2 > 8)"  --filterName "RPAgt8" \
@@ -63,7 +64,7 @@ java -Xmx4g -Djava.io.tmpdir=${variantFiltDir} \
  --filterName "NotPutatativeHarmfulVariant" \
  --filterExpression "(vc.hasAttribute('1000gPhase1Indels.AF') && (vc.getAttribute('1000gPhase1Indels.AF') > 0.02&&vc.getAttribute('1000gPhase1Indels.AF') < 0.98))" --filterName "1000gMAFgt0.02" \
  --filterExpression "(vc.hasAttribute('1000gPhase1Indels.EUR_AF') && (vc.getAttribute('1000gPhase1Indels.EUR_AF') > 0.02&&vc.getAttribute('1000gPhase1Indels.EUR_AF') < 0.98))" --filterName "1000gPhase1Indels.EUR_AF0.02" \
- --filterExpression "QD < 2.0 && vc.hasAttribute('AF') && QD / AF < 8.0"  --filterName "QDlt2andQdbyAflt8
+ --filterExpression "QD < 2.0 && vc.hasAttribute('AF') && QD / AF < 8.0"  --filterName "QDlt2andQdbyAflt8"
 
 putFile ${indelMnpVcf}
 putFile ${indelMnpVcfIdx}
