@@ -1,12 +1,14 @@
 #MOLGENIS walltime=23:59:00 mem=4gb ppn=1
 
+#string project
+
+
 #Parameter mapping  #why not string foo,bar? instead of string foo\nstring bar
 #string stage
 #string checkStage
-#string WORKDIR
 #string projectDir
 
-#string gatkVersion
+#string gatkMod
 #string onekgGenomeFasta
 #string custAnnotVcf
 #string custAnnotVcfIdx
@@ -20,7 +22,7 @@ echo "## "$(date)" ##  $0 Started "
 
 alloutputsexist \
 "${snvVcf}" \
-"${snvVcfIdx}"
+"${snvVcfIdx}" 
 
 for file in "${onekgGenomeFasta}" "${custAnnotVcf}" "${custAnnotVcfIdx}"; do
 	echo "getFile file='$file'"
@@ -28,7 +30,7 @@ for file in "${onekgGenomeFasta}" "${custAnnotVcf}" "${custAnnotVcfIdx}"; do
 done
 
 #Load gatk module
-${stage} GATK/${gatkVersion}
+${stage} ${gatkMod}
 ${checkStage}
 
 set -x
@@ -37,7 +39,7 @@ set -e
 mkdir -p ${variantFiltDir}
 
 java -Xmx4g -Djava.io.tmpdir=${variantFiltDir} \
- -jar $GATK_HOME/GenomeAnalysisTK.jar \
+  -XX:+UseConcMarkSweepGC  -XX:ParallelGCThreads=1 -jar $EBROOTGATK/GenomeAnalysisTK.jar \
  -T SelectVariants \
  -R ${onekgGenomeFasta} \
  --variant:vcf ${custAnnotVcf} \
@@ -46,14 +48,13 @@ java -Xmx4g -Djava.io.tmpdir=${variantFiltDir} \
  -selectType SNP
 
 java -Xmx4g -Djava.io.tmpdir=${variantFiltDir} \
- -jar $GATK_HOME/GenomeAnalysisTK.jar \
+  -XX:+UseConcMarkSweepGC  -XX:ParallelGCThreads=1 -jar $EBROOTGATK/GenomeAnalysisTK.jar \
  -T VariantFiltration \
  -R ${onekgGenomeFasta} \
  --variant:VCF ${snvRawVcf} \
  -o ${snvVcf} \
- --filterExpression "QUAL < 30" --filterName "LowQual" \
- --filterExpression "QD < 2.0" --filterName "QDlt2" \
- --filterExpression "MQ < 40.0" --filterName "MQlt40" \
+ --filterExpression "QUAL < 20" --filterName "LowQual" \
+ --filterExpression "MQ < 20.0" --filterName "MQlt40" \
  --filterExpression "vc.hasAttribute('MQRankSum') && MQRankSum < -12.5" --filterName "MQRankSumlt-12_5" \
  --filterExpression "vc.hasAttribute('ReadPosRankSum') && ReadPosRankSum < -20.0" --filterName "ReadPosRankSumlt-20" \
  --filterExpression "FS > 60.0" --filterName "FSgt60" \
@@ -70,5 +71,6 @@ putFile ${snvVcf}
 putFile ${snvVcfIdx}
 
 rm ${snvRawVcf} ${snvRawVcfIdx}
+
 
 echo "## "$(date)" ##  $0 Done "
