@@ -1,16 +1,19 @@
-#MOLGENIS walltime=23:59:00 mem=8gb ppn=2
+#MOLGENIS walltime=23:59:00 mem=9gb ppn=2
+
+#string project
+
 
 #Parameter mapping  #why not string foo,bar? instead of string foo\nstring bar
 #string stage
 #string checkStage
-#string WORKDIR
 #string projectDir
 
-#string gatkVersion
+#string gatkMod
+#string gatkOpt
 #string dbsnpVcf
 #string dbsnpVcfIdx
 #string onekgGenomeFasta
-#list bsqrBam,bsqrBai
+#list bqsrBam,bqsrBai
 
 #string haplotyperDir
 #string haplotyperVcf
@@ -18,7 +21,7 @@
 
 
 #string annotatorDir
-#string snpEffVersion
+#string snpEffMod
 #string snpEffStats
 
 #string snpEffGatkAnnotVcf
@@ -54,11 +57,13 @@
 #string regulation_HSMMBin
 #string regulation_HUVECBin
 #string regulation_IMR90Bin
-#string regulation_K562bBin
 #string regulation_K562Bin
 #string regulation_NHABin
 #string regulation_NHEKBin
 #string snpEffectPredictorBin
+
+#string oneKgP1wgsVcf
+#string oneKgP1wgsVcfIdx
 
 #string dbnsfp
 #string dbnsfpTbi
@@ -77,21 +82,21 @@ echo "## "$(date)" ##  $0 Started "
 #string snpEffAnnotVcfIdx
 
 #tired of typing getfile....
-for file in "${exacVcf}" "${exacVcfIdx}" "${dbnsfp}" "${dbnsfpTbi}" "${oneKgPhase1SnpsVcf}" "${oneKgPhase1SnpsVcfIdx}" "${oneKgPhase1IndelsVcf}" "${oneKgPhase1IndelsVcfIdx}" "${bsqrBam[@]}" "${bsqrBai[@]}" "${dbsnpVcf}" "${dbsnpVcfIdx}" "${onekgGenomeFasta}" "${haplotyperVcf}" "${haplotyperVcfIdx}" "${cosmicVcf}" "${cosmicVcfIdx}" "${regulation_CD4Bin}"  "${regulation_GM06990Bin}"  "${regulation_GM12878Bin}"  "${regulation_H1ESCBin}"  "${regulation_HeLaS3Bin}"  "${regulation_HepG2Bin}"  "${regulation_HMECBin}"  "${regulation_HSMMBin}"  "${regulation_HUVECBin}"  "${regulation_IMR90Bin}"  "${regulation_K562bBin}"  "${regulation_K562Bin}"  "${regulation_NHABin}"  "${regulation_NHEKBin}"  "${snpEffectPredictorBin}" ; do
+for file in "${oneKgP1wgsVcf}" "${oneKgP1wgsVcfIdx}" "${exacVcf}" "${exacVcfIdx}" "${dbnsfp}" "${dbnsfpTbi}" "${oneKgPhase1SnpsVcf}" "${oneKgPhase1SnpsVcfIdx}" "${oneKgPhase1IndelsVcf}" "${oneKgPhase1IndelsVcfIdx}" "${bqsrBam[@]}" "${bqsrBai[@]}" "${dbsnpVcf}" "${dbsnpVcfIdx}" "${onekgGenomeFasta}" "${haplotyperVcf}" "${haplotyperVcfIdx}" "${cosmicVcf}" "${cosmicVcfIdx}" "${regulation_CD4Bin}"  "${regulation_GM06990Bin}"  "${regulation_GM12878Bin}"  "${regulation_H1ESCBin}"  "${regulation_HeLaS3Bin}"  "${regulation_HepG2Bin}"  "${regulation_HMECBin}"  "${regulation_HSMMBin}"  "${regulation_HUVECBin}"  "${regulation_IMR90Bin}"  "${regulation_K562Bin}"  "${regulation_NHABin}"  "${regulation_NHEKBin}"  "${snpEffectPredictorBin}" ; do
 	echo "getFile file='$file'"
 	getFile $file
 done
 
 #Load snpeff/gatk module
-${stage} snpEff/${snpEffVersion}
-${stage} GATK/${gatkVersion}
+${stage} ${snpEffMod}
+${stage} ${gatkMod}
 ${checkStage}
 
 set -x
 set -e
 
 # sort unique and print like '-I file1.bam -I file2.bam '
-bams=($(printf '%s\n' "${bsqrBam[@]}" | sort -u ))
+bams=($(printf '%s\n' "${bqsrBam[@]}" | sort -u ))
 inputs=$(printf ' -I %s ' $(printf '%s\n' ${bams[@]}))
 
 mkdir -p ${annotatorDir}
@@ -138,8 +143,8 @@ mkdir -p ${annotatorDir}
 
 
 
-java -Xmx8g -jar  $SNPEFF_HOME/snpEff.jar \
- -c $SNPEFF_HOME/snpEff.config \
+java -Xmx8g -jar  $EBROOTSNPEFF/snpEff.jar \
+ -c $EBROOTSNPEFF/snpEff.config \
  -stats ${snpEffStats} \
  -v -o gatk \
  GRCh37.75 \
@@ -151,7 +156,7 @@ rm -v ${snpEffStats}
 
 #review  --excludeAnnotation MVLikelihoodRatio 
 
-java -Xmx8g -Djava.io.tmpdir=${annotatorDir} -jar $GATK_HOME/GenomeAnalysisTK.jar \
+java -Xmx8g -Djava.io.tmpdir=${annotatorDir}  -XX:+UseConcMarkSweepGC  -XX:ParallelGCThreads=1 -jar $EBROOTGATK/GenomeAnalysisTK.jar \
  -T VariantAnnotator \
  -R ${onekgGenomeFasta} \
  --dbsnp ${dbsnpVcf} \
@@ -166,7 +171,7 @@ java -Xmx8g -Djava.io.tmpdir=${annotatorDir} -jar $GATK_HOME/GenomeAnalysisTK.ja
  --snpEffFile ${snpEffGatkAnnotVcf} \
  --resource:cosmic,VCF ${cosmicVcf} \
  -E 'cosmic.ID' \
-  --resource:1000gPhase1Snps,vcf ${oneKgPhase1SnpsVcf} \
+  --resource:1000gPhase1Snps,vcf ${oneKgP1wgsVcf} \
  -E '1000gPhase1Snps.AF' \
  -E '1000gPhase1Snps.AFR_AF' \
  -E '1000gPhase1Snps.AMR_AF' \
@@ -204,9 +209,10 @@ java -Xmx8g -Djava.io.tmpdir=${annotatorDir} -jar $GATK_HOME/GenomeAnalysisTK.ja
  -V:input,VCF ${haplotyperVcf} \
  --out ${gatkAnnotVcf} \
  -L ${haplotyperVcf} \
+ ${gatkOpt}
  
-java -Xmx8g -jar  $SNPEFF_HOME/snpEff.jar \
- -c $SNPEFF_HOME/snpEff.config \
+java -Xmx8g -jar  $EBROOTSNPEFF/snpEff.jar \
+ -c $EBROOTSNPEFF/snpEff.config \
  -formatEff \
  -canon \
  -hgvs \
@@ -218,8 +224,8 @@ java -Xmx8g -jar  $SNPEFF_HOME/snpEff.jar \
  
 rm  -v ${snpEffStats}
 
-java -Xmx8g -jar  $SNPEFF_HOME/snpEff.jar \
- -c $SNPEFF_HOME/snpEff.config \
+java -Xmx8g -jar  $EBROOTSNPEFF/snpEff.jar \
+ -c $EBROOTSNPEFF/snpEff.config \
  -hgvs \
  -lof \
  -stats ${snpEffStats} \
@@ -230,8 +236,8 @@ java -Xmx8g -jar  $SNPEFF_HOME/snpEff.jar \
  
 rm  -v ${snpEffStats}
 
-java -Xmx8g -jar  $SNPEFF_HOME/snpEff.jar \
- -c $SNPEFF_HOME/snpEff.config \
+java -Xmx8g -jar  $EBROOTSNPEFF/snpEff.jar \
+ -c $EBROOTSNPEFF/snpEff.config \
  -hgvs \
  -lof \
  -stats ${snpEffStats} \
@@ -240,7 +246,7 @@ java -Xmx8g -jar  $SNPEFF_HOME/snpEff.jar \
  ${gatkAnnotVcf} \
  1>${snpEffAnnotVcf}
  
-java -Xmx8g -jar $SNPEFF_HOME/SnpSift.jar \
+java -Xmx8g -jar $EBROOTSNPEFF/SnpSift.jar \
  dbnsfp -db ${dbnsfp}\
  -f genename,Uniprot_acc,Uniprot_id,Uniprot_aapos,Interpro_domain,cds_strand,refcodon,SLR_test_statistic,codonpos,fold-degenerate,Ancestral_allele,Ensembl_geneid,Ensembl_transcriptid,aapos,aapos_SIFT,aapos_FATHMM,SIFT_score,SIFT_converted_rankscore,SIFT_pred,Polyphen2_HDIV_score,Polyphen2_HDIV_rankscore,Polyphen2_HDIV_pred,Polyphen2_HVAR_score,Polyphen2_HVAR_rankscore,Polyphen2_HVAR_pred,LRT_score,LRT_converted_rankscore,LRT_pred,MutationTaster_score,MutationTaster_converted_rankscore,MutationTaster_pred,MutationAssessor_score,MutationAssessor_rankscore,MutationAssessor_pred,FATHMM_score,FATHMM_rankscore,FATHMM_pred,RadialSVM_score,RadialSVM_rankscore,RadialSVM_pred,LR_score,LR_rankscore,LR_pred,Reliability_index,VEST3_score,VEST3_rankscore,CADD_raw,CADD_raw_rankscore,CADD_phred,GERP++_NR,GERP++_RS,GERP++_RS_rankscore,phyloP46way_primate,phyloP46way_primate_rankscore,phyloP46way_placental,phyloP46way_placental_rankscore,phyloP100way_vertebrate,phyloP100way_vertebrate_rankscore,phastCons46way_primate,phastCons46way_primate_rankscore,phastCons46way_placental,phastCons46way_placental_rankscore,phastCons100way_vertebrate,phastCons100way_vertebrate_rankscore,SiPhy_29way_pi,SiPhy_29way_logOdds,SiPhy_29way_logOdds_rankscore,LRT_Omega,UniSNP_ids,1000Gp1_AC,1000Gp1_AF,1000Gp1_AFR_AC,1000Gp1_AFR_AF,1000Gp1_EUR_AC,1000Gp1_EUR_AF,1000Gp1_AMR_AC,1000Gp1_AMR_AF,1000Gp1_ASN_AC,1000Gp1_ASN_AF,ESP6500_AA_AF,ESP6500_EA_AF,ARIC5606_AA_AC,ARIC5606_AA_AF,ARIC5606_EA_AC,ARIC5606_EA_AF,clinvar_rs,clinvar_clnsig,clinvar_trait \
  ${snpEffAnnotVcf} \
@@ -255,10 +261,5 @@ rm -v ${snpEffAnnotVcf}* ${gatkAnnotVcf}* ${snpEffGatkAnnotVcf}*
 
 putFile ${annotVcf}
 putFile ${annotVcfIdx}
-
-if [ ! -z "$PBS_JOBID" ]; then
-	echo "## "$(date)" Collecting PBS job statistics"
-	qstat -f $PBS_JOBID
-fi
 
 echo "## "$(date)" ##  $0 Done "
