@@ -1,9 +1,11 @@
 #MOLGENIS walltime=23:59:00 mem=1gb ppn=1
 
+#string project
+
+
 #Parameter mapping  #why not string foo,bar? instead of string foo\nstring bar
 #string stage
 #string checkStage
-#string WORKDIR
 #string projectDir
 #string onekgGenomeFasta
 
@@ -12,8 +14,10 @@
 #string tableDir
 #string variantTable
 #string variantRawTable
-#string gatkVersion
-#string vcfToolsVersion
+#string gatkMod
+#string vcfToolsMod
+#string pipelineUtilMod
+
 
 echo "## "$(date)" ##  $0 Started "
 
@@ -26,8 +30,9 @@ for file in "${vcf}" "${onekgGenomeFasta}"; do
 done
 
 #Load gatk module
-${stage} GATK/${gatkVersion}
-${stage} vcftools/${vcfToolsVersion}
+${stage} ${gatkMod}
+${stage} ${vcfToolsMod}
+${stage} ${pipelineUtilMod}
 ${checkStage}
 
 set -x
@@ -35,9 +40,9 @@ set -e
 
 mkdir -p ${tableDir}
 
-fields=$(perl /gcc/tools/scripts/DumpFieldsForVariantsToTable.pl ${vcf})
+fields=$(perl $EBROOTPIPELINEMINUTIL/bin/DumpFieldsForVariantsToTable.pl ${vcf})
 
-java -Xmx1g -Djava.io.tmpdir=${tableDir} -jar $GATK_HOME/GenomeAnalysisTK.jar \
+java -Xmx1g -Djava.io.tmpdir=${tableDir}  -XX:+UseConcMarkSweepGC  -XX:ParallelGCThreads=1 -jar $EBROOTGATK/GenomeAnalysisTK.jar \
  -T VariantsToTable \
  -R ${onekgGenomeFasta} \
  -V ${vcf} \
@@ -46,7 +51,7 @@ java -Xmx1g -Djava.io.tmpdir=${tableDir} -jar $GATK_HOME/GenomeAnalysisTK.jar \
  -F CHROM -F POS -F REF -F ALT -F ID -F QUAL -F FILTER $fields \
  -o ${variantRawTable}
  
-java -Xmx1g -Djava.io.tmpdir=${tableDir} -jar $GATK_HOME/GenomeAnalysisTK.jar \
+java -Xmx1g -Djava.io.tmpdir=${tableDir}  -XX:+UseConcMarkSweepGC  -XX:ParallelGCThreads=1 -jar $EBROOTGATK/GenomeAnalysisTK.jar \
  -T VariantsToTable \
  -R ${onekgGenomeFasta} \
  -V ${vcf} \
